Added live preview link in Readme

--- a/README
+++ b/README
@@ -3,3 +3,7 @@ https://www.frontendmentor.io/ Profile card component challenge
 Challenge
 
 https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ
+
+Live Preview
+
+https://profilecardsite.netlify.app/
